--- a/NERCHA/index.html
+++ b/NERCHA/index.html
@@ -1,12 +1,8 @@
 <!DOCTYPE HTML>
-<!--
-	Spatial by TEMPLATED
-	templated.co @templatedco
-	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
--->
+
 <html>
 	<head>
-		<title>Spatial by TEMPLATED</title>
+		<title>Nerchapetti</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -115,10 +111,19 @@
 							</div>
 							
 						</div>
-						<ul class="actions">
+						<!--<ul class="actions">
 							<li><a href="#" class="button special big">Donate</a></li>
 							
-						</ul>
+						</ul>-->
+						<div class="razorpay-embed-btn" data-url="https://pages.razorpay.com/pl_GqO3CKzNw2tcv5/view" data-text="Pay Now" data-color="#528FF0" data-size="large">
+										<script>
+										  (function(){
+											var d=document; var x=!d.getElementById('razorpay-embed-btn-js')
+											if(x){ var s=d.createElement('script'); s.defer=!0;s.id='razorpay-embed-btn-js';
+											s.src='https://cdn.razorpay.com/static/embed_btn/bundle.js';d.body.appendChild(s);} else{var rzp=window['__rzp__'];
+											rzp && rzp.init && rzp.init()}})();
+										</script>
+									  </div>
 					</div>
 				</section>
 
