--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
 
 		<!-- Footer -->
 		
-		<footer id="footer" class="wrapper style1-alt">
+		<footer id="footer" >
             <div class="inner">
                 <div class="footerRow">
                     <div>
