--- a/main.html
+++ b/main.html
@@ -118,12 +118,13 @@
         <a href="#"><i class="fab fa-youtube fa-2x logo"></i></a>
       </div>
       <div class="sub-links">
-        <ul>
-         
+        <ul>  
           <li><a href="#">Enroll</a></li>
-          <li><a href="#">about us</a></li>
-         
-          <li><a href="#">Contact Us</a></li>
+          <li><a href="#">About</a></li>    
+          <li><a href="#">Contact</a></li>
+          <li><a href="#">Priest</a></li>
+          <li><a href="#">Patreon</a></li>
+          <li><a href="#">Parish</a></li>
         </ul>
       </div>
     </section>
@@ -131,8 +132,13 @@
 
     <!-- FOOTER -->
     <footer>
-      <p>&copy John zakariah technologies</p>
-      <p> &copy 2021</p>
+      <b> &copy; 2021, Copyright <a href="https://johnzakariah.com/">John Zakariah Technologies.</a>  All Rights Reserved</b>
+        <div class = "policies">
+          <a href="#">Privacy Policy</a>
+          <a href="#">Terms of Use</a>
+          <a href="#">Refund Policy</a>
+          <a href="#">AML Policy</a>
+        </div>  
     </footer>
   </div>
 </body>
