--- a/main.html
+++ b/main.html
@@ -134,7 +134,24 @@
           
 
       <h1 id="Campaigns">Campaigns</h1>
+      <!-- sapna card -->
       <main class="page-content">
+        <figure class="snip1515">
+          <div class="profile-image"><img src="img/education.jpg" alt="sample83" /></div>
+          <figcaption>
+            <h3>Education Empowers! Help Us Do It For 1000 Girls!</h3>
+            <h4>by Protsahan India Foundation</h4>
+            <p style="font-size:0.8rem"><strong style="color:black">Rs. 50000</strong> raised</p>
+            <p>Last donation 1 day ago</p>
+            <div id="myProgress">
+              <div id="myBar"></div>
+            </div>
+            <div style="display:flex; justify-content: space-around; margin-top: 25px">
+              <p style="font-size:0.9rem"><strong style="color:black">10 days </strong>Left</p>
+              <p style="font-size:0.9rem"><strong style="color:black">1000 </strong>Supporters</p>
+            </div>
+          </figcaption>
+        </figure>
         <div class="card">
             <div class="content">
                 <h2 class="title">CHURCH NAME</h2>
@@ -214,7 +231,7 @@
           <li><a href="#">About</a></li>    
           <li><a href="#">Contact</a></li>
           <li><a href="#">Priest</a></li>
-          <li><a href="#">Patreon</a></li>
+          <li><a href="#">Patron</a></li>
           <li><a href="#">Parish</a></li> 
         </ul>
       </b>
