--- a/main.html
+++ b/main.html
@@ -304,7 +304,7 @@
           <li><a href="#">About</a></li>
           <li><a href="#">Contact</a></li>    
           <li><a href="#">Enroll</a></li>
-          <li><a href="#">Patron</a></li>
+          <li><a href="patron">Patron</a></li>
           <li><a href="#">Pricing</a></li>
         
         </ul>
