--- a/main.html
+++ b/main.html
@@ -160,7 +160,7 @@
   </div>
   <div class="product-details">
     <span class="product-catagory">Education Empowers! </span>
-    <h4><a href="">Help Us Do It For 1000 Girls!</a></h4>
+    <h4><a href="education.html">Help Us Do It For 1000 Girls!</a></h4>
      <span class="organiser">St. Peters and St. Pauls Orthodox Church</span>
     <p>Help Us Do It For 1000 Girls!by Protsahan India Foundation Rs. 50000 raised</p><br>
     
