--- a/index.html
+++ b/index.html
@@ -160,7 +160,33 @@ button:hover, a:hover {
 <button style="margin-bottom: 50px;border-radius: 25px; margin-left: 550px; width: 24%; ">Share</button>
 </header>
 
-
+<section id="one" class="wrapper style2 special" style="align-content: center; justify-content: center;align-items: center;">
+	<div class="container" >
+		<header class="major">
+			<h2>Quick Pay</h2>
+			
+		</header>
+		<div>
+			<div style="justify-content: center;">	
+				<form class="donateForm">
+					<span><label for="lname"> Name:</label>
+					<input type="text" id="fname" name="firstname" placeholder="Your name..">
+					<label for="lname">Email:</label>
+					<input type="text" id="Email" name="Email" placeholder="Your Email..">
+					<label for="Mobile">Mobile Number:</label>
+					<input type="text" id="Mobile" name="Mobile" placeholder="Your Mobile number..">
+					<label for="Amount">Amount:</label>
+					<input type="text" id="Amount" name="Amount" placeholder="Amount">				
+				</form></div>			
+			</div>
+		</div>
+		<ul class="actions">
+			<button style="margin-bottom: 50px;border-radius: 25px; margin-left: 550px; width: 24%;><li><a href="https://pages.razorpay.com/pl_GqO3CKzNw2tcv5/view" class="button special big">Donate</a></li></button>
+			
+			
+		</ul>
+	</div>
+</section>
 <!-- STEPS 
 <div class="item content">
 	<div class="container toparea">
@@ -200,13 +226,12 @@ button:hover, a:hover {
 	</div>
 </div>-->
 
-<div class="w3-bar w3-black" style="margin-left:5px; margin-bottom: 20px; background-color: #1A73E8!important;padding-right: 80px;">
-	<button class="w3-bar-item w3-button" onclick="openCity('London')">About</button>
-	<button class="w3-bar-item w3-button" onclick="openCity('Paris')">Committe</button>
-	<button class="w3-bar-item w3-button" onclick="openCity('Tokyo')">Location</button>
+<div class="w3-bar w3-black" style="margin-left:5px; margin-bottom: 20px; background-color: #1A73E8!important">
+	<button class="w3-bar-item w3-button" onclick="openCity('London')">London</button>
+	<button class="w3-bar-item w3-button" onclick="openCity('Paris')">Paris</button>
+	<button class="w3-bar-item w3-button" onclick="openCity('Tokyo')">Tokyo</button>
 	<button class="w3-bar-item w3-button" onclick="openCity('Tokyo1')">Payments</button>
   </div>
-  
   <div id="London" class="w3-container city" style="margin-bottom: 30px;">
 	<h2>About the Church</h2>
 	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
